--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "devDependencies": {
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
-        "browser-sync": "^2.26.14",
+        "browser-sync": "^2.27.4",
         "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0.3",
         "jquery": "^3.6.0",
-        "laravel-mix": "^5.0.9",
+        "laravel-mix": "^6.0.25",
         "lodash": "^4.17.21",
         "popper.js": "^1.12",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.32.8",
+        "resolve-url-loader": "^3.1.4",
+        "sass": "^1.35.2",
         "sass-loader": "^8.0.0",
-        "vue-template-compiler": "^2.6.12"
+        "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "sweetalert2": "^10.15.5"
+        "@sweetalert2/theme-wordpress-admin": "^5.0.1",
+        "sweetalert2": "^10.16.9"
     }
 }
