--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,5 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/js/delete.js": "/js/delete.js",
-    "/js/welcome.js": "/js/welcome.js"
+    "/js/welcome1.js": "/js/welcome1.js"
 }
